beautify and validate

--- a/elena-email-theme/index.html
+++ b/elena-email-theme/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Elena Email Theme</title>
-  <link href="https://fonts.googleapis.com/css?family=Cabin|Open+Sans:400,600|PT+Sans:400,700|Ubuntu:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cabin:400,600&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="dist/style.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
@@ -51,7 +54,6 @@
       </div>
     </div>
   </header>
-
   <section class="features">
     <div class="container">
       <ul class="menu features__menu">
@@ -85,7 +87,6 @@
       </ul>
     </div>
   </section>
-
   <section class="section-1">
     <div class="container">
       <ul class="menu section-1__menu">
@@ -110,7 +111,6 @@
       </ul>
     </div>
   </section>
-
   <section class="section-2">
     <div class="container">
       <div class="section-2__container">
@@ -124,7 +124,6 @@
       </div>
     </div>
   </section>
-
   <section class="section-3">
     <div class="container">
       <ul class="menu section-3__menu">
@@ -157,9 +156,7 @@
         </li>
       </ul>
     </div>
-
   </section>
-
   <section class="section-4">
     <div class="container">
       <ul class="menu section-4__menu">
@@ -184,7 +181,6 @@
       </ul>
     </div>
   </section>
-
   <section class="section-5">
     <div class="container">
       <ul class="menu section-5__menu">
@@ -202,7 +198,6 @@
       </ul>
     </div>
   </section>
-
   <section class="partners">
     <div class="container">
       <div class="partners__container">
@@ -227,14 +222,12 @@
         </ul>
       </div>
     </div>
-
   </section>
-
   <footer class="footer">
     <div class="container">
       <div class="footer__container">
         <p class="text footer__copyright">
-          <span class="footer__brand">Elenea &copy;</span> copyright 2013 -
+          <span class="footer__brand">Elenea &copy;</span>copyright 2013 -
           <a class="link footer__unsubscribe" href="#">Unsubscribe here</a>
         </p>
         <ul class="menu footer__social-menu">
@@ -250,11 +243,12 @@
           </li>
           <li class="footer__social-item">
             <a class="footer__social-link" href="#">
-                <i class="fab fa-twitter"></i>
+              <i class="fab fa-twitter"></i>
             </a>
           </li>
         </ul>
       </div>
+    </div>
   </footer>
 </body>
 
