--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <hr class="line header__line">
           </div>
           <div class="button header__button">
-            <span>Get your own copy now</span>
-            <span class="header__button_show">></span>
+            <span class="header__text">Get your own copy now</span>
+            <span class="header__text header__text_show">&gt;</span>
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
           <div class="features__img-box">
             <img class="features__img" src="./img/user-group.png" alt="user-group">
           </div>
-          <h3 class="features__heading heading_3">Profesionals</h3>
+          <h3 class="heading heading_3 features__heading">Profesionals</h3>
           <hr class="line features__line">
           <p class="features__text">Lorem ipsum, dolor sit amet consectetur elit.</p>
           <a href="#" class="link features__link">Check this out ></a>
@@ -70,7 +70,7 @@
           <div class="features__img-box">
             <img class="features__img" src="./img/heart.png" alt="heart">
           </div>
-          <h3 class="features__heading heading_3">Amateurs</h3>
+          <h3 class="heading heading_3 features__heading">Amateurs</h3>
           <hr class="line features__line">
           <p class="features__text">Lorem ipsum, dolor sit amet consectetur elit.</p>
           <a href="#" class="link features__link">Check this out ></a>
@@ -79,7 +79,7 @@
           <div class="features__img-box">
             <img class="features__img" src="./img/headset.png" alt="headset">
           </div>
-          <h3 class="features__heading heading_3">For everyone</h3>
+          <h3 class="heading heading_3 features__heading">For everyone</h3>
           <hr class="line features__line">
           <p class="features__text">Lorem ipsum, dolor sit amet consectetur elit.</p>
           <a href="#" class="link features__link">Check this out ></a>
@@ -94,7 +94,7 @@
           <div class="section-1__img-box">
             <img class="img section-1__img" src="./img/s1-1.png" alt="Responsive email template">
           </div>
-          <h2 class="section-1__heading heading_2">Responsive email template</h2>
+          <h2 class="heading heading_2 section-1__heading">Responsive email template</h2>
           <hr class="line section-1__line">
           <p class="text section-1__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Donec interdum mollis</p>
           <a href="#" class="button section-1__button">Read more</a>
@@ -103,7 +103,7 @@
           <div class="section-1__img-box">
             <img class="img section-1__img" src="./img/s1-2-1.png" alt="Fully compatible template">
           </div>
-          <h2 class="section-1__heading heading_2">Fully compatible template</h2>
+          <h2 class="heading heading_2 section-1__heading">Fully compatible template</h2>
           <hr class="line section-1__line">
           <p class="text section-1__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Donec interdum mollis</p>
           <a href="#" class="button section-1__button">Read more</a>
@@ -116,7 +116,7 @@
       <div class="section-2__container">
         <div class="section-2__heading-box">
           <img class="section-2__icon" src="./img/lifebuoy.svg" alt="">
-          <h2 class="section-2__heading heading_2">Fully suported template</h2>
+          <h2 class="heading heading_2 section-2__heading">Fully suported template</h2>
         </div>
         <hr class="line section-2__line">
         <p class="text section-2__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ducimus amet nihil, quam exercitationem, debitis architecto tempore rerum facilis, saepe ratione? Veniam facere cum maxime facilis, non reiciendis molestiae nulla?</p>
@@ -131,7 +131,7 @@
           <div class="section-3__img-box">
             <img class="img" src="./img/s3-1.png" alt="Fully layered PSD">
           </div>
-          <h3 class="section-3__heading heading_3">Fully layered PSD</h3>
+          <h3 class="heading heading_3 section-3__heading">Fully layered PSD</h3>
           <hr class="line section-3__line">
           <p class="text section-3__text">Lorem ipsum, dolor sit amet consectetur adipiscing elit.</p>
           <a href="#" class="link section-3__link">Check this out ></a>
@@ -140,7 +140,7 @@
           <div class="section-3__img-box">
             <img class="img" src="./img/s3-2.png" alt="Full compatibility">
           </div>
-          <h3 class="section-3__heading heading_3">Full compatibility</h3>
+          <h3 class="heading heading_3 section-3__heading">Full compatibility</h3>
           <hr class="line section-3__line">
           <p class="text section-3__text">Lorem ipsum, dolor sit amet consectetur adipiscing elit.</p>
           <a href="#" class="link section-3__link">Check this out ></a>
@@ -149,7 +149,7 @@
           <div class="section-3__img-box">
             <img class="img" src="./img/s3-3.png" alt="Very great modules">
           </div>
-          <h3 class="section-3__heading heading_3">Very great modules</h3>
+          <h3 class="heading heading_3 section-3__heading">Very great modules</h3>
           <hr class="line section-3__line">
           <p class="text section-3__text">Lorem ipsum, dolor sit amet consectetur adipiscing elit.</p>
           <a href="#" class="link section-3__link">Check this out ></a>
@@ -163,7 +163,7 @@
         <li class="section-4__menu-item">
           <div class="section-4__heading-box">
             <img class="section-4__icon" src="./img/paper-plane.svg" alt="">
-            <h2 class="section-4__heading heading_2">Send it now</h2>
+            <h2 class="heading heading_2 section-4__heading">Send it now</h2>
           </div>
           <hr class="line section-4__line">
           <p class="text section-4__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ducimus amet nihil, quam exercitationem, debitis</p>
@@ -172,7 +172,7 @@
         <li class="section-4__menu-item">
           <div class="section-4__heading-box">
             <img class="section-4__icon" src="./img/pencil.svg" alt="">
-            <h2 class="section-4__heading heading_2">Very nice to see</h2>
+            <h2 class="heading heading_2 section-4__heading">Very nice to see</h2>
           </div>
           <hr class="line section-4__line">
           <p class="text section-4__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ducimus amet nihil, quam exercitationem, debitis</p>
@@ -190,7 +190,7 @@
           </div>
         </li>
         <li class="section-5__menu-item">
-          <h2 class="section-5__heading heading_2">Responsive email template</h2>
+          <h2 class="heading section-5__heading heading_2">Responsive email template</h2>
           <hr class="line section-5__line">
           <p class="text section-5__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ducimus amet nihil, quam exercitationem</p>
           <a href="#" class="button section-5__button">Read more</a>
@@ -203,7 +203,7 @@
       <div class="partners__container">
         <div class="partners__heading-box">
           <img class="partners__icon" src="./img/star-outlined.svg" alt="">
-          <h2 class="partners__heading heading">this template was featured on</h2>
+          <h2 class="heading partners__heading">this template was featured on</h2>
         </div>
         <hr class="line partners__line">
         <ul class="menu partners__menu">
